Desafio24 - MMC e MDC

--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -21,7 +21,7 @@
                <legend>Valores para calculo:</legend>
                <p></p>
                <p>Valor 1: <input type="number" class="valor" id="cxVal1" name="tCxVal1"> </p>
-               <p>Valor 2: <input type="number" class="valor" id="CxVal2" name="tCxVal2"> </p>
+               <p>Valor 2: <input type="number" class="valor" id="CxVal2" name="tCxVal2" disabled> </p>
                <p><input type="button" value="Calcular"></p>
            </fieldset>
         </div>
