--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio 24!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>MMC e MDC</h1>
     </header>
@@ -22,7 +22,7 @@
                <p></p>
                <p>Valor 1: <input type="number" class="valor" id="cxVal1" name="tCxVal1"> </p>
                <p>Valor 2: <input type="number" class="valor" id="CxVal2" name="tCxVal2" disabled> </p>
-               <p><input type="button" value="Calcular"></p>
+               <p><input type="button" value="Calcular" onclick="calcular()"></p>
            </fieldset>
         </div>
     </section>
