Desafio24 - MMC e MDC

--- a/Desafios/Desafio24/desafio.html
+++ b/Desafios/Desafio24/desafio.html
@@ -25,6 +25,10 @@
                <p><input type="button" value="Calcular" onclick="calcular()"></p>
            </fieldset>
         </div>
+
+        <div id="resultado">
+
+        </div>
     </section>
 
     <footer>
