--- a/Desafios/Desafio25_adicional_01/desafio.html
+++ b/Desafios/Desafio25_adicional_01/desafio.html
@@ -15,7 +15,7 @@
         <div>
             <input type="button" value="Clique em mim" onclick="msg()"> 
         </div>
-        <div>
+        <div id="res">
             
         </div>
     </section>
