Desafio25 - Adicional_02 - Números Aleatórios

--- a/Desafios/Desafio25_adicional_02/desafio.html
+++ b/Desafios/Desafio25_adicional_02/desafio.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo Para os Desafios!</title>
+    <title>Desafio25 Adicional 02!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Números Aleatórios</h1>
     </header>
     
     <section>
         <div>
-            Desafio??????
+            
         </div>
         <div>
             Vamos tentar resolver!
