Desafio25 - Adicional_02 - Números Aleatórios

--- a/Desafios/Desafio25_adicional_02/desafio.html
+++ b/Desafios/Desafio25_adicional_02/desafio.html
@@ -16,7 +16,7 @@
             <p>Número aleatório entre 0 e 50!</p>
             <input type="button" value="Gerar Número" onclick="gerar()"> 
         </div>
-        <div>
+        <div id="res">
            
         </div>
     </section>
