--- a/Desafios/Desafio25_adicional_02 copy/desafio.html
+++ b/Desafios/Desafio25_adicional_02 copy/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-           <input type="button" value="IMDB" onclick="imdb()">
+         Clique para aceder ao <input type="button" value="IMDB" onclick="imdb()">
         </div>
         <div>
            
