Desafio25 - Adicional_04 - Alterar o título da página

--- a/Desafios/Desafio25_adicional_03/desafio.html
+++ b/Desafios/Desafio25_adicional_03/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Novo título: <input type="text" id="cxTitulo" name="tCxTitulo"> <input type="button" value="alterar" >
+            Novo título: <input type="text" id="cxTitulo" name="tCxTitulo"> <input type="button" value="Alterar" onclick="alterar()">
         </div>
         <div>
            
