Desafio25 - Adicional_04 - Alterar o título da página

--- a/Desafios/Desafio25_adicional_03/desafio.html
+++ b/Desafios/Desafio25_adicional_03/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio25 Adicional 04!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Alterar o título da página!.</h1>
     </header>
