--- a/Desafios/Desafio25_adicional_03/desafio.html
+++ b/Desafios/Desafio25_adicional_03/desafio.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio25 Adicional 04!</title>
+    <title>Desafio25 Adicional 03!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body onload="iniciar()">
     <header>
-        <h1>Alterar o título da página!.</h1>
+        <h1>Alterar o título da página!</h1>
     </header>
     
     <section>
