Desafio25 - Adicional_04 - Alterar o título da página

--- a/Desafios/Desafio25_adicional_04_aaaa/desafio.html
+++ b/Desafios/Desafio25_adicional_04_aaaa/desafio.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio25 Adicional 03!</title>
+    <title>Desafio25 Adicional 04!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="iniciar()">
+<body>
     <header>
-        <h1>Alterar o título da página!</h1>
+        <h1>Aceder ao IMDB.</h1>
     </header>
     
     <section>
         <div>
-            Novo título: <input type="text" id="cxTitulo" name="tCxTitulo"> <input type="button" value="Alterar" onclick="alterar()">
+         Clique para aceder ao <input type="button" value="IMDB" onclick="imdb()">
         </div>
         <div>
            
