Desafio25 - Adicional 05- resto da divisão de 25 por 3

--- a/Desafios/Desafio25_adicional_05/desafio.html
+++ b/Desafios/Desafio25_adicional_05/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio25 Adicional 05!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="dividir()">
     <header>
         <h1>Resto de 25 a dividir por 3.</h1>
     </header>
