Desafio25 - Adicional 05- Resto da divisão de 25 por 3

--- a/Desafios/Desafio25_adicional_05/desafio.html
+++ b/Desafios/Desafio25_adicional_05/desafio.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="dividir()">
     <header>
-        <h1>Resto de 25 a dividir por 3.</h1>
+        <h1>Resto de 25 a dividir por 3!</h1>
     </header>
     
     <section>
