--- a/Desafios/Desafio25_adicional_06/desafio.html
+++ b/Desafios/Desafio25_adicional_06/desafio.html
@@ -12,7 +12,7 @@
     </header>
     
     <section>
-        <div id="cx1">
+        <div id="cx1" onclick="clicou()">
             <h1>Clique em Mim!</h1>
         </div>
         <div id="cx2">
