--- a/Desafios/Desafio25_adicional_06/desafio.html
+++ b/Desafios/Desafio25_adicional_06/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div id="cx1" onclick="clicou()">
-            <h1>Clique em Mim!</h1>
+            <h1 id="titCx1">Clique em Mim!</h1>
         </div>
         <div id="cx2">
            <h1>Focus em Mim!</h1>
