Desafio25 - Adicional 06- Utilizar o DOM verificando o Focus

--- a/Desafios/Desafio25_adicional_06/desafio.html
+++ b/Desafios/Desafio25_adicional_06/desafio.html
@@ -15,8 +15,8 @@
         <div id="cx1" onclick="clicoucx1()">
             <h1 id="titCx1">Clique em Mim!</h1>
         </div>
-        <div id="cx2">
-           <h1>Focus em Mim!</h1>
+        <div id="cx2" onmouseover="focuscx2()">
+           <h1>Rato em Mim!</h1>
         </div>
     </section>
 
