Desafio25 - Adicional 06- Utilizar o DOM verificando o Focus

--- a/Desafios/Desafio25_adicional_06/desafio.html
+++ b/Desafios/Desafio25_adicional_06/desafio.html
@@ -16,7 +16,7 @@
             <h1 id="titCx1">Clique em Mim!</h1>
         </div>
         <div id="cx2" onmouseover="focuscx2()">
-           <h1>Rato em Mim!</h1>
+           <h1 id="titCx2">Rato em Mim!</h1>
         </div>
     </section>
 
