--- a/Desafios/Desafio25_adicional_07/desafio.html
+++ b/Desafios/Desafio25_adicional_07/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            
+            Nota: <input type="number">
         </div>
         <div">
         </div>
