Desafio25 - Adicional07 - Avaliador de Alunos.

--- a/Desafios/Desafio25_adicional_07/desafio.html
+++ b/Desafios/Desafio25_adicional_07/desafio.html
@@ -15,7 +15,7 @@
         <div>
             Nota: <input type="number" id="CxNota"> <input type="button" value="Verificar" onclick="verificaNota()">
         </div>
-        <div">
+        <div id="resultado">
         </div>
     </section>
 
