--- a/Desafios/Desafio31/desafio.html
+++ b/Desafios/Desafio31/desafio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio25 - Adicional 07!</title>
+    <title>Desafio31!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
