Desafio32 - Mensagem com valores! - passagem de parametros

--- a/Desafios/Desafio32/desafio.html
+++ b/Desafios/Desafio32/desafio.html
@@ -13,7 +13,9 @@
     
     <section>
         <div>
-            Desafio??????
+           <input type="button" value="Mensagem 1" >
+           <input type="button" value="Mensagem 2" >
+           <input type="button" value="Mensagem 3" >
         </div>
         <div>
             Vamos tentar resolver!
