Desafio32 - Mensagem com valores! - passagem de parametros

--- a/Desafios/Desafio32/desafio.html
+++ b/Desafios/Desafio32/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-           <input type="button" value="Mensagem 1" >
+           <input type="button" value="Mensagem 1" onclick="msg(1)">
            <input type="button" value="Mensagem 2" >
            <input type="button" value="Mensagem 3" >
         </div>
