Desafio32 - Mensagem com valores! - passagem de parametros

--- a/Desafios/Desafio32/desafio.html
+++ b/Desafios/Desafio32/desafio.html
@@ -14,8 +14,8 @@
     <section>
         <div>
            <input type="button" value="Mensagem 1" onclick="msg(1)">
-           <input type="button" value="Mensagem 2" >
-           <input type="button" value="Mensagem 3" >
+           <input type="button" value="Mensagem 2" onclick="msg(2)">
+           <input type="button" value="Mensagem 3" onclick="msg(3)">
         </div>
     </section>
 
