--- a/Desafios/Desafio32/desafio.html
+++ b/Desafios/Desafio32/desafio.html
@@ -13,9 +13,9 @@
     
     <section>
         <div>
-           <input type="button" value="Mensagem 3" onclick="msg(3)">
-           <input type="button" value="Mensagem 6" onclick="msg(6)">
-           <input type="button" value="Mensagem 10" onclick="msg(10)">
+           <input type="button" value="Número: 3" onclick="msg(3)">
+           <input type="button" value="Número: 6" onclick="msg(6)">
+           <input type="button" value="Número: 10" onclick="msg(10)">
         </div>
     </section>
 
