Desafio32 - Mensagem com valores! - Passagem de parametros

--- a/Desafios/Desafio32/desafio.html
+++ b/Desafios/Desafio32/desafio.html
@@ -13,6 +13,7 @@
     
     <section>
         <div>
+            <p>Selecione um botão!</p><br>
            <input type="button" value="Número: 3" onclick="msg(3)">
            <input type="button" value="Número: 6" onclick="msg(6)">
            <input type="button" value="Número: 10" onclick="msg(10)">
