--- a/Desafios/Desafio32/desafio.html
+++ b/Desafios/Desafio32/desafio.html
@@ -17,6 +17,10 @@
            <input type="button" value="Número: 3" onclick="msg(3)">
            <input type="button" value="Número: 6" onclick="msg(6)">
            <input type="button" value="Número: 10" onclick="msg(10)">
+           <br><br>
+           <p>Mensagem com o número da caixa de texto:</p>
+           Número: <input type="number" name="tCxval" id="Cxval">
+           <input type="button" value="Mostrar Mensagem" onclick="mostraMsg()">
         </div>
     </section>
 
