Desafio34 - Positivo, Negativo ou Zero

--- a/Desafios/Desafio34/desafio.html
+++ b/Desafios/Desafio34/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Desafio??????
+            <input type="number">
         </div>
         <div>
             Vamos tentar resolver!
