Desafio34 - Positivo, Negativo ou Zero

--- a/Desafios/Desafio34/desafio.html
+++ b/Desafios/Desafio34/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Número: <input type="number" name="tCxval" id="Cxval">
+            Número: <input type="number" name="tCxval" id="Cxval"> <input type="button" value="Verificar">
         </div>
         <div>
         </div>
