--- a/Desafios/Desafio34/desafio34.html
+++ b/Desafios/Desafio34/desafio34.html
@@ -6,7 +6,7 @@
     <title>Desafio34!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body onload="iniicar()">
+<body onload="inicar()">
     <header>
         <h1>Positivo, Negativo ou Zero?</h1>
     </header>
