Desafio34 - Positivo, Negativo ou Zero

--- a/Desafios/Desafio34/desafio34.html
+++ b/Desafios/Desafio34/desafio34.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Número: <input type="number" name="tCxval" id="Cxval"> <input type="button" value="Verificar">
+            Número: <input type="number" name="tCxval" id="Cxval"> <input type="button" value="Verificar" onclick="verificar()">
         </div>
         <div>
         </div>
