--- a/Desafios/Desafio34/desafio34.html
+++ b/Desafios/Desafio34/desafio34.html
@@ -15,7 +15,7 @@
         <div>
             Número: <input type="number" name="tCxval" id="Cxval"> <input type="button" value="Verificar" onclick="verificar()">
         </div>
-        <div>
+        <div id="resultado">
         </div>
     </section>
 
