--- a/Desafios/Desafio35/desafio.html
+++ b/Desafios/Desafio35/desafio.html
@@ -14,8 +14,9 @@
     <section>
         <div>
             <select name="selTab" id="CxSeltab">
-                
+
             </select>
+            <input type="button" value="Calcular">
         </div>
         <div>
             Vamos tentar resolver!
