--- a/Desafios/Desafio35/desafio.html
+++ b/Desafios/Desafio35/desafio.html
@@ -12,9 +12,18 @@
     </header>
     
     <section>
-        <div>
+        <div>Tabuada:
             <select name="selTab" id="CxSeltab">
-                
+                <option value="1">1</option>
+                <option value="2">1</option>
+                <option value="3">1</option>
+                <option value="4">1</option>
+                <option value="5">1</option>
+                <option value="6">1</option>
+                <option value="7">1</option>
+                <option value="8">1</option>
+                <option value="9">1</option>
+                <option value="10">1</option>
             </select>
             <input type="button" value="Calcular">
         </div>
