--- a/Desafios/Desafio35/desafio.html
+++ b/Desafios/Desafio35/desafio.html
@@ -6,7 +6,7 @@
     <title>Desafio35!</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="iniciar()">
     <header>
         <h1>Tabuadas!</h1>
     </header>
