--- a/Desafios/Desafio35/desafio.html
+++ b/Desafios/Desafio35/desafio.html
@@ -27,7 +27,7 @@
                 <option value="10">10</option>
               -->  
             </select>
-            <input type="button" value="Calcular">
+            <input type="button" value="Calcular" onclick="calcularTabuada()">
         </div>
         <div>
            
