--- a/Desafios/Desafio35/desafio.html
+++ b/Desafios/Desafio35/desafio.html
@@ -29,7 +29,7 @@
             </select>
             <input type="button" value="Calcular" onclick="calcularTabuada()">
         </div>
-        <div>
+        <div id="resultado">
            
         </div>
     </section>
