Deafio36 - Factorial de um número

--- a/Desafios/Desafio36/desafio.html
+++ b/Desafios/Desafio36/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Desafio??????
+            <input type="text">
         </div>
         <div>
             Vamos tentar resolver!
