--- a/Desafios/Desafio36/desafio.html
+++ b/Desafios/Desafio36/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            <input type="text">
+            <input type="number">
         </div>
         <div>
             Vamos tentar resolver!
