Deafio36 - Factorial de um número

--- a/Desafios/Desafio36/desafio.html
+++ b/Desafios/Desafio36/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            <input type="number">
+            Valor: <input type="number">! <input type="text">
         </div>
         <div>
            
