--- a/Desafios/Desafio36/desafio.html
+++ b/Desafios/Desafio36/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Valor: <input type="number">! <input type="text">
+            Valor: <input type="number">! <input type="button">
         </div>
         <div>
            
