Deafio36 - Factorial de um número

--- a/Desafios/Desafio36/desafio.html
+++ b/Desafios/Desafio36/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Valor: <input type="number">! <input type="button">
+            Valor: <input type="number" id="num">! <input type="button" value="calcular">
         </div>
         <div>
            
