Deafio36 - Factorial de um número

--- a/Desafios/Desafio36/desafio.html
+++ b/Desafios/Desafio36/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            Valor: <input type="number" id="num" class="impNr">! <input type="button" value="calcular">
+            Valor: <input type="number" id="num" class="impNr">! <input type="button" value="Calcular" class="btn">
         </div>
         <div>
            
