--- a/Desafios/Desafio36/desafio.html
+++ b/Desafios/Desafio36/desafio.html
@@ -15,7 +15,7 @@
         <div>
             Valor: <input type="number" id="CxNum" name="tCxnum" class="impNr">! <input type="button" value="Calcular" class="btn" onclick="calcular()">
         </div>
-        <div>
+        <div id="resultado">
            
         </div>
     </section>
