Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio.html
+++ b/Desafios/Desafio37/desafio.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-            
+            <input type="number" >
         </div>
         <div>
             Vamos tentar resolver!
