Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio.html
+++ b/Desafios/Desafio37/desafio.html
@@ -13,7 +13,10 @@
     
     <section>
         <div>
-            <input type="number" >
+            <input type="number" id="num1" class="inpnr"> 
+            <select name="tSelOper" id="tCxSelOper" size="4">
+                
+            </select>
         </div>
         <div>
             Vamos tentar resolver!
