--- a/Desafios/Desafio37/desafio.html
+++ b/Desafios/Desafio37/desafio.html
@@ -15,7 +15,8 @@
         <div>
             <input type="number" id="num1" class="inpnr"> 
             <select name="tSelOper" id="tCxSelOper" size="4">
-                
+                <option value="+">+</option>
+                <option value=""></option>
             </select>
         </div>
         <div>
