Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio.html
+++ b/Desafios/Desafio37/desafio.html
@@ -16,7 +16,8 @@
             <input type="number" id="num1" class="inpnr"> 
             <select name="tSelOper" id="tCxSelOper" size="4">
                 <option value="+">+</option>
-                <option value=""></option>
+                <option value="-">-</option>
+                
             </select>
         </div>
         <div>
