Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio.html
+++ b/Desafios/Desafio37/desafio.html
@@ -17,6 +17,7 @@
             <select name="tSelOper" id="tCxSelOper" size="4">
                 <option value="+">+</option>
                 <option value="-">-</option>
+                <option value="x">x</option>
                 
             </select>
         </div>
