Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio.html
+++ b/Desafios/Desafio37/desafio.html
@@ -18,8 +18,9 @@
                 <option value="+">+</option>
                 <option value="-">-</option>
                 <option value="x">x</option>
-                
+                <option value="/">/</option>
             </select>
+            
         </div>
         <div>
             Vamos tentar resolver!
