Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio.html
+++ b/Desafios/Desafio37/desafio.html
@@ -20,7 +20,7 @@
                 <option value="x">x</option>
                 <option value="/">/</option>
             </select>
-            
+            <input type="number" >
         </div>
         <div>
             Vamos tentar resolver!
