Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio37.html
+++ b/Desafios/Desafio37/desafio37.html
@@ -14,7 +14,7 @@
     <section>
         <div>
             <input type="number" id="num1" class="inpnr"> 
-            <select name="tSelOper" id="tCxSelOper" size="4">
+            <select name="tSelOper" id="tCxSelOper">
                 <option value="+">+</option>
                 <option value="-">-</option>
                 <option value="x">x</option>
