Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio37.html
+++ b/Desafios/Desafio37/desafio37.html
@@ -20,7 +20,8 @@
                 <option value="x">x</option>
                 <option value="/">/</option>
             </select>
-            <input type="number" id="num2" class="inpnr">
+            <input type="number" id="num2" class="inpnr" disabled>
+            <input type="button" class="btnCalc" value="Calcular">
         </div>
         <div>
             
