--- a/Desafios/Desafio37/desafio37.html
+++ b/Desafios/Desafio37/desafio37.html
@@ -13,14 +13,14 @@
     
     <section>
         <div>
-            <input type="number" id="num1" class="inpnr"> 
+            <input type="number" id="CxNum1" name="tCxNum1" class="inpnr"> 
             <select name="tSelOper" id="tCxSelOper">
                 <option value="+">+</option>
                 <option value="-">-</option>
                 <option value="x">x</option>
                 <option value="/">/</option>
             </select>
-            <input type="number" id="num2" class="inpnr" disabled>
+            <input type="number" id="CxNum2" name="tCxNum2" class="inpnr" disabled>
             <input type="button" class="btnCalc" value="Calcular">
         </div>
         <div>
