Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio37.html
+++ b/Desafios/Desafio37/desafio37.html
@@ -21,7 +21,7 @@
                 <option value="/">/</option>
             </select>
             <input type="number" id="CxNum2" name="tCxNum2" class="inpnr" disabled>
-            <input type="button" class="btnCalc" value="Calcular">
+            <input type="button" class="btnCalc" value="Calcular" onclick="calcular()">
         </div>
         <div>
             
