--- a/Desafios/Desafio37/desafio37.html
+++ b/Desafios/Desafio37/desafio37.html
@@ -14,9 +14,12 @@
     <section>
         <div>
             <fieldset>
+                <legend>Número:</legend>
                 <input type="number" id="CxNum1" name="tCxNum1" class="inpnr">
             </fieldset> 
+
             <fieldset class="operador">
+                <legend>Operador:</legend>
                 <select name="tSelOper" id="tCxSelOper">
                     <option value="+">+</option>
                     <option value="-">-</option>
@@ -24,7 +27,9 @@
                     <option value="/">/</option>
                 </select>
             </fieldset>
+
             <fieldset>
+                <legend>Número:</legend>
                 <input type="number" id="CxNum2" name="tCxNum2" class="inpnr" disabled>
             </fieldset>
             <input type="button" class="btnCalc" value="Calcular" onclick="calcular()">
