Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio37.html
+++ b/Desafios/Desafio37/desafio37.html
@@ -15,7 +15,7 @@
         <div>
             <fieldset>
                 <legend>Número:</legend>
-                <input type="number" id="CxNum1" name="tCxNum1" class="inpnr">
+                <input type="number" id="CxNum1" name="tCxNum1" class="inpnr" onchange="desbloqCxNum2()">
             </fieldset> 
 
             <fieldset class="operador">
