Desafio37 - Operaçõoes com Números

--- a/Desafios/Desafio37/desafio37.html
+++ b/Desafios/Desafio37/desafio37.html
@@ -34,7 +34,8 @@
             </fieldset>
             <input type="button" class="btnCalc" value="Calcular" onclick="calcular()">
         </div>
-        <div>
+        
+        <div id="resultado">
             
         </div>
     </section>
