--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -13,7 +13,7 @@
     
     <section>
         <div>
-           <input type="number">
+          Número <input type="number" name="tCxNum" id="CxNum">
         </div>
 
         <div>
