Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -14,6 +14,7 @@
     <section>
         <div>
           Número <input type="number" name="tCxNum" id="CxNum">
+          <select name="" id=""></select>
         </div>
 
         <div>
