--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -14,7 +14,10 @@
     <section>
         <div>
           Número <input type="number" name="tCxNum" id="CxNum">
-          <select name="" id=""></select>
+          
+          <select name="tSelNum" id="cSelNum">
+
+          </select>
         </div>
 
         <div>
