--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -14,7 +14,7 @@
     <section>
         <div>
           Número <input type="number" name="tCxNum" id="CxNum">
-          <input type="button" value="Adicionar">
+          <input type="button" value="Adicionar" class="btnAdic">
           <select name="tSelNum" id="cSelNum">
 
           </select>
