Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -15,9 +15,12 @@
         <div>
           Número <input type="number" name="tCxNum" id="CxNum">
           <input type="button" value="Adicionar" class="btnAdic">
-          <select name="tSelNum" id="cSelNum">
-
-          </select>
+          <fieldset>
+              <legend>Detalhes:</legend>
+              <select name="tSelNum" id="cSelNum" size="4">
+    
+              </select>
+          </fieldset>
         </div>
 
         <div>
