Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -13,8 +13,11 @@
     
     <section>
         <div>
-          Número <input type="number" name="tCxNum" id="CxNum">
-          <input type="button" value="Adicionar" class="btnAdic">
+          <fieldset class="numero">
+              <legend>Adicionar</legend>
+              Número <input type="number" name="tCxNum" id="CxNum">
+              <input type="button" value="Adicionar" class="btnAdic">
+          </fieldset>
           <fieldset>
               <legend>Detalhes:</legend>
               <select name="tSelNum" id="cSelNum" size="4">
