Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -15,7 +15,7 @@
         <div>
           <fieldset class="numero">
               <legend>Adicionar</legend>
-              Número <input type="number" name="tCxNum" id="CxNum">
+              Número: <input type="number" name="tCxNum" id="CxNum">
               <input type="button" value="Adicionar" class="btnAdic">
           </fieldset>
           <fieldset>
