--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -23,6 +23,7 @@
               <select name="tSelNum" id="cSelNum" size="4">
     
               </select>
+              <input type="button" value="Verificar" class="btnVerificar">
           </fieldset>
         </div>
 
