Desafios38 - Números Pares e Inpares!

--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -16,7 +16,7 @@
           <fieldset class="numero">
               <legend>Adicionar</legend>
               Número: <input type="number" name="tCxNum" id="CxNum">
-              <input type="button" value="Adicionar" class="btnAdic">
+              <input type="button" value="Adicionar" class="btnAdic" onclick="Adicionar()">
           </fieldset>
           <fieldset>
               <legend>Detalhes:</legend>
