--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Números Pares e Inpares!</h1>
+        <h1>Números Pares e Impares!</h1>
     </header>
     
     <section>
