Desafios38 - Números Pares e Impares!

--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -23,11 +23,11 @@
               <select name="tSelNum" id="cSelNum" size="4">
     
               </select>
-              <input type="button" value="Verificar" class="btnVerificar">
+              <input type="button" value="Par ou Impar" class="btnVerificar" onclick="verifica">
           </fieldset>
         </div>
 
-        <div>
+        <div id="resultado">
             
         </div>
     </section>
