Desafios38 - Números Pares e Impares!

--- a/Desafios/Desafio38/desafio38.html
+++ b/Desafios/Desafio38/desafio38.html
@@ -23,7 +23,7 @@
               <select name="tSelNum" id="cSelNum" size="4">
     
               </select>
-              <input type="button" value="Par ou Impar" class="btnVerificar" onclick="verifica">
+              <input type="button" value="Par ou Impar" class="btnVerificar" onclick="verificar()">
           </fieldset>
         </div>
 
