Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -16,7 +16,8 @@
            <p>Senso municipal! Ajude a ajudar!</p>
            <p>Por Favor preencha os campos abaixo!</p> 
           
-           <p><strong>Salário</strong> <input type="number" id="CxSal" name="tCxSal"> </p>
+           <p><strong>Salário:</strong> <input type="number" id="CxSal" name="tCxSal"> </p>
+           <p><strong>Número de filhos:</strong> <input type="text"></p>
         </div>
         <div>
            
