Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -17,7 +17,7 @@
            <p>Por Favor preencha os campos abaixo!</p> 
           
            <p><strong>Salário:</strong> <input type="number" id="CxSal" name="tCxSal"> </p>
-           <p><strong>Número de filhos:</strong> <input type="text"></p>
+           <p><strong>Número de filhos:</strong> <input type="range"></p>
         </div>
         <div>
            
