--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 39 - Cidade!</title>
     <link rel="stylesheet" href="estilo.css">
+
+    <script>
+        function mostrarResultado(){
+            document.getElementById('nfilhos').innerHTML = document.getElementById('nrFilhos').value
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -20,17 +26,18 @@
            
            <p><strong>Número de filhos:</strong> <input type="range" min="0" max="10" step="1" list="nrFilhos">
                 <datalist id="nrFilhos">
-                    <option value="1" label="1"></option>
-                    <option value="2" label="2"></option>
-                    <option value="3" label="3"></option>
-                    <option value="4" label="4"></option>
-                    <option value="5" label="5"></option>
-                    <option value="6" label="6"></option>
-                    <option value="7" label="7"></option>
-                    <option value="8" label="8"></option>
-                    <option value="9" label="9"></option>
-                    <option value="10" label="10"></option>
+                    <option value="1"></option>
+                    <option value="2"></option>
+                    <option value="3"></option>
+                    <option value="4"></option>
+                    <option value="5"></option>
+                    <option value="6"></option>
+                    <option value="7"></option>
+                    <option value="8"></option>
+                    <option value="9"></option>
+                    <option value="10"></option>
                 </datalist> 
+                <span id="nfilhos"></span>
             </p>
         </div>
         <div>
