Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -26,6 +26,7 @@
            
            <p><strong>Número de filhos:</strong> <input type="range" id="NrDeFilhos" min="0" max="10" step="1" list="nrFilhos" onchange="mostrarResultado()">
                 <datalist id="nrFilhos">
+                    <option value="0" selected></option>
                     <option value="1"></option>
                     <option value="2"></option>
                     <option value="3"></option>
