Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -24,7 +24,7 @@
           
            <p><strong>Salário:</strong> <input type="number" id="CxSal" name="tCxSal"> </p>
            
-           <p><strong>Número de filhos:</strong> <input type="range" id="NrDeFilhos" min="0" max="10" step="1" list="nrFilhos" onchange="mostrarResultado()">
+           <p><strong>Número de filhos:</strong> <input type="range" id="NrDeFilhos" min="0" max="10" step="1" list="nrFilhos"  value="0" onchange="mostrarResultado()">
                 <datalist id="nrFilhos">
                     <option value="0"></option>
                     <option value="1"></option>
