Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -39,6 +39,7 @@
                     <option value="10"></option>
                 </datalist> 
                 <span id="NumFilhos"></span>
+                <input type="button" value="Enviar" class="btnEnviar">
             </p>
         </div>
         <div>
