Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -12,7 +12,7 @@
         }
     </script>
 </head>
-<body>
+<body onload="mostrarResultado()">
     <header>
         <h1>Cidade Municipio Municipal!</h1>
     </header>
