--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -22,7 +22,7 @@
            <p>Senso municipal! Ajude a ajudar!</p>
            <p>Por Favor preencha os campos abaixo!</p> 
           
-           <p><strong>Salário:</strong> <input type="number" id="CxSal" name="tCxSal"> </p>
+           <p><strong>Salário:</strong> <input type="number" id="CxSal" name="tCxSal"> €</p>
            
            <p><strong>Número de filhos:</strong> <input type="range" id="NrDeFilhos" min="0" max="10" step="1" list="nrFilhos"  value="0" onchange="mostrarResultado()">
                 <datalist id="nrFilhos">
@@ -39,7 +39,7 @@
                     <option value="10"></option>
                 </datalist> 
                 <span id="NumFilhos"></span>
-                <input type="button" value="Enviar" class="btnEnviar">
+                <input type="button" value="Enviar" class="btnEnviar" onclick="Envia()">
             </p>
         </div>
         <div>
