Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -22,7 +22,7 @@
            <p>Senso municipal! Ajude a ajudar!</p>
            <p>Por Favor preencha os campos abaixo!</p> 
           
-           <p><strong>Salário:</strong> <input type="number" min="100" id="CxSal" name="tCxSal"> €</p>
+           <p><strong>Salário:</strong> <input type="number" id="CxSal" name="tCxSal"> €</p>
            
            <p><strong>Número de filhos:</strong> <input type="range" id="NrDeFilhos" min="0" max="10" step="1" list="nrFilhos"  value="0" onchange="mostrarResultado()">
                 <datalist id="nrFilhos">
