Desafio39 - Média de Salário e de Filhos por habitante

--- a/Desafios/Desafio39/desafio39.html
+++ b/Desafios/Desafio39/desafio39.html
@@ -42,7 +42,7 @@
                 <input type="button" value="Enviar" class="btnEnviar" onclick="Envia()">
             </p>
         </div>
-        <div>
+        <div id="result">
            
         </div>
     </section>
