Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -12,11 +12,15 @@
     </header>
     
     <section>
-        <div>
-            Desafio??????
+        <div class="esq">
+            <fieldset>
+                <legend>Inseção</legend>
+            </fieldset> 
         </div>
-        <div>
-            Vamos tentar resolver!
+        <div class="dir">
+            <fieldset>
+                <legend>Detalhes</legend>
+            </fieldset>
         </div>
     </section>
 
