Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -20,6 +20,9 @@
         <div class="dir">
             <fieldset>
                 <legend>Detalhes</legend>
+                <select name="tDtlNomes" id="cDtlNomes" size="10">
+
+                </select>
             </fieldset>
         </div>
     </section>
