--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -15,8 +15,11 @@
         <div class="esq">
             <fieldset>
                 <legend>Inseção</legend>
+                Nome: <input type="text" id="CxNome" name="tCxNome"><br>
+                
             </fieldset> 
         </div>
+        
         <div class="dir">
             <fieldset>
                 <legend>Detalhes</legend>
