Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -16,10 +16,10 @@
             <fieldset>
                 <legend>Inseção</legend>
                 Nome: <input type="text" id="CxNome" name="tCxNome"><br>
-                
+                <input type="button" value="Inserir" id="btnInserir" class="btnInsert">
             </fieldset> 
         </div>
-        
+
         <div class="dir">
             <fieldset>
                 <legend>Detalhes</legend>
