Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -15,7 +15,9 @@
         <div class="esq">
             <fieldset>
                 <legend>Inseção</legend>
-                Nome: <input type="text" id="CxNome" name="tCxNome"><br>
+                <p class="alingEsq">
+                    Nome: <input type="text" id="CxNome" name="tCxNome">
+                </p><br>
                 <input type="button" value="Inserir" id="btnInserir" class="btnInsert">
             </fieldset> 
         </div>
