Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -18,7 +18,7 @@
                 <p class="alingEsq">
                     Nome: <input type="text" id="CxNome" name="tCxNome">
                 </p>
-                <input type="button" value="Inserir" id="btnInserir" class="btnInsert">
+                <input type="button" value="Inserir" id="btnInserir" class="btnInsert" onclick="inserir()">
             </fieldset> 
         </div>
 
