--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -30,6 +30,10 @@
                 </select>
             </fieldset>
         </div>
+
+        <div id="result">
+
+        </div>
     </section>
 
     <footer>
