Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -16,7 +16,7 @@
             <fieldset>
                 <legend>Inseção</legend>
                 <p class="alingEsq">
-                    Nome: <input type="text" id="CxNome" name="tCxNome">
+                    <span id="lblNome">Nome:</span> <input type="text" id="CxNome" name="tCxNome">
                 </p>
                 <input type="button" value="Inserir" id="btnInserir" class="btnInsert" onclick="inserir()">
             </fieldset> 
