Desafio40 - Pesquisar por nome num ARRAY

--- a/Desafios/Desafio40/desafio40.html
+++ b/Desafios/Desafio40/desafio40.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Pesquiza de Nomes!</h1>
+        <h1>Pesquisa de Nomes!</h1>
     </header>
     
     <section>
         <div class="esq">
             <fieldset>
-                <legend>Inseção</legend>
+                <legend>Inserção</legend>
                 <p class="alingEsq">
                     <span id="lblNome">Nome:</span> <input type="text" id="CxNome" name="tCxNome">
                 </p>
